--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
+Daniela Borges (https://github.com/danielaborges)
 Eran Hammer <eran@hammer.io> (http://hueniverse.com)
 Wyatt Preul <wpreul@gmail.com> (http://jsgeek.com)
